--- a/Thunderstore/manifest.json
+++ b/Thunderstore/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "MoreLethalScraps",
+    "name": "RandomEnemiesSize",
     "version_number": "1.0.0",
-    "website_url": "https://github.com/Wexop/MoreLethalScraps",
-    "description": "[V50] Add common lethal company monsters or anything in the game as scraps items (Be careful it can be noisy!). Every spawn rate can be configured with LethalConfig !",
+    "website_url": "https://github.com/Wexop/RandomEnemiesSize",
+    "description": "[V50] Monsters now spawn with a random size. Configurable with LethalConfig!",
     "dependencies": [
       "BepInEx-BepInExPack-5.4.2100",
 	  "Evaisa-HookGenPatcher-0.0.5",
