--- a/Thunderstore/manifest.json
+++ b/Thunderstore/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "RandomEnemiesSize",
-    "version_number": "1.0.0",
+    "version_number": "1.0.1",
     "website_url": "https://github.com/Wexop/RandomEnemiesSize",
-    "description": "[V50] Monsters now spawn with a random size. Configurable with LethalConfig!",
+    "description": "[V50] Monsters now spawn with a random size. Configurable with LethalConfig: Outside, Indoor and Custom enemies !",
     "dependencies": [
       "BepInEx-BepInExPack-5.4.2100",
 	  "Evaisa-HookGenPatcher-0.0.5",
