fix interior, add staticNetcode and lethal level loader

--- a/Thunderstore/manifest.json
+++ b/Thunderstore/manifest.json
@@ -8,6 +8,7 @@
     "Evaisa-HookGenPatcher-0.0.5",
     "Evaisa-LethalLib-0.15.1",
     "AinaVT-LethalConfig-1.4.2",
-    "xilophor-StaticNetcodeLib-1.0.3"
+    "xilophor-StaticNetcodeLib-1.0.3",
+    "IAmBatby-LethalLevelLoader-1.2.4"
   ]
 }
