--- a/BepInEx/config/wexop.random_enemies_size.cfg
+++ b/BepInEx/config/wexop.random_enemies_size.cfg
@@ -1,17 +1,34 @@
-## Settings file was created by plugin RandomEnemiesSize v1.0.6
+## Settings file was created by plugin RandomEnemiesSize v1.1.7
 ## Plugin GUID: wexop.random_enemies_size
 
 [Custom]
+
+## Activate to make this mod affect vanilla enemies. No need to restart the game :)
+# Setting type: Boolean
+# Default value: true
+AffectVanillaEnemies = true
+
+## Activate to make this mod affect modded enemies. No need to restart the game :)
+# Setting type: Boolean
+# Default value: true
+AffectModdedEnemies = true
 
 ## Custom the size for an enemy wanted with his EXACT name. RECOMMENDED: Go to the thunderstore mod page, you can find a generator to make easier this config. Manual example -> ForestGiant:0.4:5;FlowerMan:0.2:6. Dont forgot the separator ';' between each monsters. No need to restart the game :)
 # Setting type: String
 # Default value: 
 CustomEnemiesSize = 
 
-## Multiply the base size for an indoor enemy in an interior wanted with his EXACT name. RECOMMENDED: Go to the thunderstore mod page, you can find a generator to make easier this config. Manual example -> mansion#any:1.5,NutCracker:2;customInterior#any:3; No need to restart the game :)
+## THE MOD LethalLevelLoader IS REQUIRED FOR THIS FEATURE. Multiply the base size for an indoor enemy in an interior wanted with his EXACT name. RECOMMENDED: Go to the thunderstore mod page, you can find a generator to make easier this config. Manual example -> mansion#any:1.5,NutCracker:2;customInterior#any:3; No need to restart the game :)
 # Setting type: String
 # Default value: 
 CustomInteriorsSize = 
+
+[DEV]
+
+## Show the dev logs
+# Setting type: Boolean
+# Default value: false
+DevLogs = true
 
 [FunMode]
 
@@ -37,6 +54,11 @@ LockHorizontalAxis = true
 
 [General]
 
+## The chance for each monster to have a random size. 100% is always, 0% is never. No need to restart the game :)
+# Setting type: Single
+# Default value: 100
+ChanceOfRandomSize = 100
+
 ## Change the minimum size of monsters in the factory. No need to restart the game :)
 # Setting type: Single
 # Default value: 0.4
@@ -59,8 +81,78 @@ MaxMonstersSizeOutdoor = 0.1
 
 [Influence]
 
+InfluenceHp = true
+
+[Influences]
+
 ## Activate to make size influence monsters HP. No need to restart the game :)
 # Setting type: Boolean
-# Default value: false
+# Default value: true
 InfluenceHp = true
+
+## Activate to make size influence monsters sounds pitch. No need to restart the game :)
+# Setting type: Boolean
+# Default value: true
+InfluenceSound = true
+
+## If InfluenceSound is activated, this define the minimum pitch of monsters audio sources. No need to restart the game :)
+# Setting type: Single
+# Default value: 0.6
+InfluenceSoundMinPitch = 0.6
+
+## If InfluenceSound is activated, this define the maximum pitch of monsters audio sources. No need to restart the game :)
+# Setting type: Single
+# Default value: 2.5
+InfluenceSoundMaxPitch = 2.5
+
+[Landmine]
+
+## Activate to make this mod affect land mines size. No need to restart the game :)
+# Setting type: Boolean
+# Default value: true
+AffectLandMineSize = true
+
+## Change the minimum size of land mines. No need to restart the game :)
+# Setting type: Single
+# Default value: 0.2
+MinLandMinesSize = 0.2
+
+## Change the maximum size of land mines. No need to restart the game :)
+# Setting type: Single
+# Default value: 3
+MaxLandMinesSize = 3
+
+[SpikeTrap]
+
+## Activate to make this mod affect spike traps size. No need to restart the game :)
+# Setting type: Boolean
+# Default value: true
+AffectSpikeTrapSize = true
+
+## Change the minimum size of spike traps. No need to restart the game :)
+# Setting type: Single
+# Default value: 0.3
+MinSpikeTrapSize = 0.3
+
+## Change the maximum size of spike traps. No need to restart the game :)
+# Setting type: Single
+# Default value: 2
+MaxSpikeTrapSize = 2
+
+[Turret]
+
+## Activate to make this mod affect turrets size. No need to restart the game :)
+# Setting type: Boolean
+# Default value: true
+AffectTurretSize = true
+
+## Change the minimum size of turrets. No need to restart the game :)
+# Setting type: Single
+# Default value: 0.25
+MinTurretSize = 0.25
+
+## Change the maximum size of turrets. No need to restart the game :)
+# Setting type: Single
+# Default value: 1.5
+MaxTurretSize = 1.5
 
