--- a/Thunderstore/manifest.json
+++ b/Thunderstore/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "RandomEnemiesSize",
-  "version_number": "1.1.7",
+  "version_number": "1.1.8",
   "website_url": "https://github.com/Wexop/RandomEnemiesSize",
-  "description": "[V50] Monsters now spawn with a random size. Configurable with LethalConfig: Outside, Indoor, Custom enemies and map hazards !",
+  "description": "[V50+] Monsters now spawn with a random size. Configurable with LethalConfig: Outside, Indoor, Custom enemies and map hazards !",
   "dependencies": [
     "BepInEx-BepInExPack-5.4.2100",
     "Evaisa-HookGenPatcher-0.0.5",
     "Evaisa-LethalLib-0.15.1",
     "AinaVT-LethalConfig-1.4.2",
-    "xilophor-StaticNetcodeLib-1.0.3"
+    "xilophor-StaticNetcodeLib-1.1.1"
   ]
 }
