--- a/Thunderstore/manifest.json
+++ b/Thunderstore/manifest.json
@@ -7,6 +7,7 @@
     "BepInEx-BepInExPack-5.4.2100",
     "Evaisa-HookGenPatcher-0.0.5",
     "AinaVT-LethalConfig-1.4.2",
-    "xilophor-StaticNetcodeLib-1.1.1"
+    "xilophor-StaticNetcodeLib-1.1.1",
+    "Evaisa-LethalLib-0.16.1"
   ]
 }
